# nrf52-cmake-blinky

./: .gitignore  CMakeLists.txt  ble.c  ble_app_blinky.c  blinky.ld  cli  cmds  custom_board.h  direct.c  direct_rx.c  i2c.c  i2cfunc.c  i2cfunc.h  light_bulb.c  linkerScript.ld  main.c  openocd.cfg  plantMonitor.c  rf_uart.c  sdk_config.h  soilMoistureSensor.c  soilMoistureSensor.h  test.c  uart.c
ble_config/: custom_board.h  sdk_config.h
nrf52-plant-monitor/: CMakeLists.txt  analogueButtonArray.c  analogueButtonArray.h  batteryMeter.c  batteryMeter.h  buzzer.c  buzzer.h  custom_board.h  esbTx.c  esbTx.h  plantMonitor.c  rtcModule.c  rtcModule.h  saadcHelper.c  saadcHelper.h  sdk_config.h  soilMoistureSensor.c  soilMoistureSensor.h  wakeButton.c  wakeButton.h
pcb/PlantMonitor/: PlantMonitor.brd  PlantMonitor.sch  eagle.epf
pcb/PlantMonitor/gerber/: PlantMonitor.cmp  PlantMonitor.drd  PlantMonitor.dri  PlantMonitor.gpi  PlantMonitor.plc  PlantMonitor.sol  PlantMonitor.stc  PlantMonitor.sts
